// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FormatedDate test FormatedDate component 1`] = `
<Text
  dispatch={[Function]}
  style={
    Array [
      Object {
        "color": "#818181",
      },
      undefined,
      undefined,
    ]
  }
>
  Sun, 20 Dec 2020
</Text>
`;

exports[`components/FormatedDate test FormatedDate component: check nested 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#818181",
        },
        undefined,
        Object {
          "color": "orange",
        },
      ]
    }
  >
    <Text
      dispatch={[Function]}
      style={
        Array [
          Object {
            "color": "#818181",
          },
          undefined,
          undefined,
        ]
      }
    >
      Sun, 20 Dec 2020
    </Text>
  </Text>,
  <Text
    style={
      Array [
        Object {
          "color": "#818181",
        },
        undefined,
        Object {
          "color": "orange",
        },
      ]
    }
  >
    <Text
      dispatch={[Function]}
      style={
        Array [
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Sun, 20 Dec 2020
    </Text>
     to 
    <Text
      dispatch={[Function]}
      style={
        Array [
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Mon, 21 Dec 2020
    </Text>
  </Text>,
]
`;

exports[`components/FormatedDate test FormatedDate component: check string 1`] = `
<Text
  dispatch={[Function]}
  style={
    Array [
      Object {
        "color": "#818181",
      },
      undefined,
      undefined,
    ]
  }
>
  Test
</Text>
`;

exports[`components/FormatedDate test FormatedDate component: check undefined 1`] = `
<Text
  dispatch={[Function]}
  style={
    Array [
      Object {
        "color": "#818181",
      },
      undefined,
      undefined,
    ]
  }
/>
`;
